# ltlsp

./: .gitignore  BuildGrammarsContainerfile  BuildGrammarsContainerfile_Enviornment.sh  BuildGrammarsContainerfile_Environment.sh  Cargo.toml  LanguageToolContainerfile  README.md  TODO.md  test.ltlsp
.github/workflows/: build.yml  build_languagetool_container.yml
editor-configs/helix/: config.toml  languages.toml
editor-configs/nvim/lua/lspconfig/server_configurations/: ltlsp.lua
runtime/: build_languages.sh  languages.toml
src/: document.rs  document_checker.rs  main.rs  test_utils.rs
src/checker/: mod.rs
src/checker/languagetool/: mod.rs
src/config/: mod.rs
src/languagetool/: manage_service.rs  mod.rs
src/lsp-server/: Cargo.toml
src/lsp_server/: README.md  error.rs  mod.rs  msg.rs  req_queue.rs  socket.rs  stdio.rs
src/tree_sitter/: configuration.rs  mod.rs
