[package]
name = "ltlsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="0.20.10"
tree-sitter-rust="0.20.4"
tree-sitter-md="0.1.7"

reqwest = {version = "^0.12", default-features = false, features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

[build-dependencies]
cc="*"
