[package]
name = "ltlsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="0.20.10"
tree-sitter-rust="0.20.4"
tree-sitter-md="0.1.7"

reqwest = {version = "^0.12", default-features = false, features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

crossbeam-channel = "0.5.8"
lsp-types = "0.95"

tracing = "0.1"
tracing-subscriber = "0.3"

toml = "0.8"

[build-dependencies]
lsp-types = "=0.95"
ctrlc = "3.4.1"
cc="*"
